--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
     a{ color:inherit; text-decoration:none; }
     .wrap{ max-width:1100px; margin:0 auto; padding:28px 18px 72px; }
 
-    header{ display:flex; align-items:center; justify-content:space-between; gap:14px; padding:10px 0 18px; }
+    header{
+      display:flex; align-items:center; justify-content:space-between; gap:14px;
+      padding:10px 0 18px;
+    }
     .brand{ display:flex; align-items:center; gap:10px; font-weight:950; letter-spacing:.2px; }
     .dot{ width:12px; height:12px; border-radius:50%; background:var(--accent); box-shadow:0 0 24px rgba(124,92,255,.7); }
     nav{ display:flex; gap:10px; color:var(--muted); font-weight:800; }
@@ -32,8 +35,10 @@
       padding:12px 14px; border-radius:14px;
       border:1px solid rgba(255,255,255,.14);
       font-weight:950; background: rgba(255,255,255,.06);
+      cursor:pointer;
     }
     .btn.primary{ background:var(--accent); border-color: rgba(124,92,255,.95); color:#0b1020; }
+    .btn:hover{ transform: translateY(-1px); }
 
     .hero{
       border:1px solid var(--line);
@@ -63,6 +68,20 @@
       padding:16px;
     }
 
+    .bar{
+      margin-top:14px;
+      display:flex; flex-wrap:wrap; gap:10px; align-items:center; justify-content:space-between;
+    }
+    input, select{
+      width:100%;
+      padding:12px 12px;
+      border-radius:14px;
+      border:1px solid rgba(255,255,255,.14);
+      background: rgba(0,0,0,.22);
+      color: var(--text);
+      outline:none;
+    }
+
     .sectionTitle{ margin:18px 0 8px; font-size:18px; }
 
     .grid{
@@ -87,29 +106,67 @@
       box-shadow:0 18px 60px rgba(0,0,0,.40);
     }
 
-    .img{
-      aspect-ratio: 4/3;
-      background: rgba(255,255,255,.06);
+    .imgWrap{
       border-bottom:1px solid var(--line);
-      position:relative;
-      overflow:hidden;
+      background: rgba(0,0,0,.22);
+      padding:10px;
     }
-    .img img{
+    .mainImg{
+      width:100%;
+      aspect-ratio: 4/3;
+      border-radius:14px;
+      overflow:hidden;
+      position:relative;
+      border:1px solid rgba(255,255,255,.10);
+      background: rgba(255,255,255,.04);
+      cursor: zoom-in;
+    }
+    .mainImg img{
       width:100%;
       height:100%;
-      object-fit:cover;           /* looks “shop-like” */
+      object-fit: contain; /* show full product */
       display:block;
-      transform: scale(1.03);
       filter: contrast(1.06) saturate(1.03) brightness(1.03);
+      background: rgba(0,0,0,.20);
+    }
+    .zoomHint{
+      position:absolute; right:10px; bottom:10px;
+      font-size:12px; font-weight:950;
+      padding:6px 9px; border-radius:999px;
+      background: rgba(0,0,0,.55);
+      border:1px solid rgba(255,255,255,.16);
+      backdrop-filter: blur(6px);
+      color: var(--text);
+      pointer-events:none;
     }
     .tag{
-      position:absolute; top:10px; left:10px;
+      position:absolute; left:10px; top:10px;
       font-size:12px; font-weight:950;
       padding:6px 9px; border-radius:999px;
       background: rgba(0,0,0,.55);
       border:1px solid rgba(255,255,255,.16);
       backdrop-filter: blur(6px);
     }
+
+    .thumbs{
+      display:flex;
+      gap:8px;
+      margin-top:10px;
+      overflow:auto;
+      padding-bottom:2px;
+    }
+    .thumb{
+      width:54px; height:54px;
+      border-radius:12px;
+      border:1px solid rgba(255,255,255,.14);
+      background: rgba(255,255,255,.04);
+      overflow:hidden;
+      cursor:pointer;
+      flex: 0 0 auto;
+      opacity:.82;
+    }
+    .thumb img{ width:100%; height:100%; object-fit:cover; display:block; }
+    .thumb.active{ outline:2px solid rgba(124,92,255,.85); opacity:1; }
 
     .body{ padding:14px; display:flex; flex-direction:column; gap:10px; flex:1; }
     .titleRow{ display:flex; align-items:flex-start; justify-content:space-between; gap:10px; }
@@ -123,11 +180,84 @@
 
     footer{ margin-top:26px; text-align:center; color:var(--muted); font-size:13px; line-height:1.6; }
 
+    /* Zoom modal */
+    .modal{
+      position:fixed; inset:0;
+      background: rgba(0,0,0,.72);
+      display:none;
+      align-items:center;
+      justify-content:center;
+      padding:18px;
+      z-index:9999;
+    }
+    .modal.open{ display:flex; }
+    .modalCard{
+      width:min(980px, 96vw);
+      max-height: 90vh;
+      border-radius:18px;
+      border:1px solid rgba(255,255,255,.14);
+      background: rgba(10,12,20,.78);
+      box-shadow:0 30px 90px rgba(0,0,0,.55);
+      overflow:hidden;
+      display:flex;
+      flex-direction:column;
+    }
+    .modalTop{
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      gap:10px;
+      padding:10px 12px;
+      border-bottom:1px solid rgba(255,255,255,.12);
+    }
+    .modalTitle{ font-weight:950; color:var(--text); font-size:14px; }
+    .iconBtn{
+      padding:10px 12px;
+      border-radius:12px;
+      border:1px solid rgba(255,255,255,.14);
+      background: rgba(255,255,255,.06);
+      color:var(--text);
+      cursor:pointer;
+      font-weight:950;
+    }
+    .modalBody{
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      padding:12px;
+      gap:10px;
+    }
+    .modalImgWrap{
+      width:100%;
+      border-radius:16px;
+      overflow:hidden;
+      border:1px solid rgba(255,255,255,.12);
+      background: rgba(0,0,0,.35);
+    }
+    .modalImg{
+      width:100%;
+      max-height: 76vh;
+      object-fit: contain;
+      display:block;
+    }
+    .navBtn{
+      width:44px;
+      height:44px;
+      border-radius:999px;
+      border:1px solid rgba(255,255,255,.16);
+      background: rgba(255,255,255,.06);
+      color:var(--text);
+      cursor:pointer;
+      font-weight:1000;
+      flex: 0 0 auto;
+    }
+
     @media (max-width: 940px){
       .hero{ grid-template-columns:1fr; }
       .grid{ grid-template-columns:1fr; }
       h1{ font-size:34px; }
       nav{ display:none; }
+      .navBtn{ display:none; } /* phone: swipe/thumbnail is enough */
     }
   </style>
 </head>
@@ -169,7 +299,21 @@
       </div>
     </section>
 
-    <h2 class="sectionTitle" id="shop">Shop</h2>
+    <div class="bar" id="shop">
+      <div style="flex:1 1 260px;">
+        <input id="q" placeholder="Search prints (turtle, coaster, fidget)..." />
+      </div>
+      <div style="min-width:200px;">
+        <select id="sort">
+          <option value="featured">Sort: Featured</option>
+          <option value="price-asc">Price: Low → High</option>
+          <option value="price-desc">Price: High → Low</option>
+          <option value="name">Name: A → Z</option>
+        </select>
+      </div>
+    </div>
+
+    <h2 class="sectionTitle">Shop</h2>
     <div class="grid" id="grid"></div>
 
     <h2 class="sectionTitle" id="custom">Custom Orders</h2>
@@ -200,7 +344,29 @@
     </footer>
   </div>
 
+  <!-- Zoom Modal -->
+  <div class="modal" id="modal" aria-hidden="true">
+    <div class="modalCard" role="dialog" aria-modal="true">
+      <div class="modalTop">
+        <div class="modalTitle" id="modalTitle">Image</div>
+        <div style="display:flex; gap:8px;">
+          <button class="iconBtn" id="closeBtn">Close</button>
+        </div>
+      </div>
+      <div class="modalBody">
+        <button class="navBtn" id="prevBtn" aria-label="Previous image">‹</button>
+        <div class="modalImgWrap">
+          <img id="modalImg" class="modalImg" alt="Zoomed product image" />
+        </div>
+        <button class="navBtn" id="nextBtn" aria-label="Next image">›</button>
+      </div>
+    </div>
+  </div>
+
 <script>
+  const EMAIL = "tds3ds123@gmail.com";
+
+  // ✅ Put your images in /images using the exact filenames listed above
   const PRODUCTS = [
     {
       id: "turtle",
@@ -210,7 +376,9 @@
       desc: "Flexi articulated turtle. Pick your color when ordering.",
       material: "PLA",
       ship: "Made to order",
-      image: "images/flexi-turtle.png"
+      images: [
+        "images/turtle-1.png"
+      ]
     },
     {
       id: "cone",
@@ -220,7 +388,11 @@
       desc: "Smooth twisty fidget cone. Great desk toy.",
       material: "PLA",
       ship: "Made to order",
-      image: "images/fidget-cone.png"
+      images: [
+        "images/cone-1.jpg",
+        "images/cone-2.jpg",
+        "images/cone-3.jpg"
+      ]
     },
     {
       id: "coasters",
@@ -230,26 +402,60 @@
       desc: "6 patterned coasters + holder. Tell me which pattern(s) you want.",
       material: "PLA",
       ship: "Made to order",
-      image: "images/coasters.png"
+      images: [
+        "images/coasters-1.png",
+        "images/coasters-2.png",
+        "images/coasters-3.png",
+        "images/coasters-4.png",
+        "images/coasters-5.png",
+        "images/coasters-6.png",
+        "images/coasters-7.png"
+      ]
     }
   ];
 
+  const fmt = (n) => n.toFixed(2);
   document.getElementById("year").textContent = new Date().getFullYear();
 
   const grid = document.getElementById("grid");
-  const fmt = (n) => n.toFixed(2);
+  const q = document.getElementById("q");
+  const sort = document.getElementById("sort");
 
   function escapeHtml(s){
     return String(s).replace(/[&<>"']/g, m => ({ "&":"&amp;","<":"&lt;",">":"&gt;",'"':"&quot;","'":"&#39;" }[m]));
   }
 
-  function card(p){
+  function getFilteredSorted(){
+    const term = (q.value || "").trim().toLowerCase();
+    let list = PRODUCTS.filter(p =>
+      [p.name, p.desc, p.material, p.tag].some(x => (x||"").toLowerCase().includes(term))
+    );
+    const s = sort.value;
+    if(s === "name") list.sort((a,b)=>a.name.localeCompare(b.name));
+    if(s === "price-asc") list.sort((a,b)=>a.price-b.price);
+    if(s === "price-desc") list.sort((a,b)=>b.price-a.price);
+    return list;
+  }
+
+  function productCard(p){
+    const main = p.images?.[0] || "";
+    const thumbs = (p.images || []).map((src, i) => `
+      <div class="thumb ${i===0 ? "active" : ""}" data-src="${src}" data-i="${i}" title="View">
+        <img src="${src}" alt="${escapeHtml(p.name)} thumbnail ${i+1}">
+      </div>
+    `).join("");
+
     return `
-      <div class="product">
-        <div class="img">
-          ${p.tag ? `<span class="tag">${escapeHtml(p.tag)}</span>` : ""}
-          <img src="${p.image}" alt="${escapeHtml(p.name)}">
+      <div class="product" data-product="${p.id}">
+        <div class="imgWrap">
+          <div class="mainImg" data-zoom="1" data-src="${main}" data-index="0" title="Click to zoom">
+            ${p.tag ? `<span class="tag">${escapeHtml(p.tag)}</span>` : ""}
+            <img src="${main}" alt="${escapeHtml(p.name)}">
+            <span class="zoomHint">Click to zoom</span>
+          </div>
+          ${p.images && p.images.length > 1 ? `<div class="thumbs">${thumbs}</div>` : ``}
         </div>
+
         <div class="body">
           <div class="titleRow">
             <p class="title">${escapeHtml(p.name)}</p>
@@ -262,17 +468,119 @@
           </div>
           <div class="actions">
             <a class="btn primary"
-               href="mailto:tds3ds123@gmail.com?subject=Order%20-%20${encodeURIComponent(p.name)}&body=Hi%20TDS3DS!%0A%0AI%20want%20to%20order%3A%20${encodeURIComponent(p.name)}%0AQuantity%3A%0AColor%3A%0AShipping%20postcode%2Fcountry%3A%0A%0AThanks!">
+               href="mailto:${EMAIL}?subject=Order%20-%20${encodeURIComponent(p.name)}&body=Hi%20TDS3DS!%0A%0AI%20want%20to%20order%3A%20${encodeURIComponent(p.name)}%0AQuantity%3A%0AColor%3A%0AShipping%20postcode%2Fcountry%3A%0A%0AThanks!">
               Order
             </a>
-            <a class="btn" href="mailto:tds3ds123@gmail.com?subject=Question%20-%20${encodeURIComponent(p.name)}">Question</a>
+            <a class="btn"
+               href="mailto:${EMAIL}?subject=Question%20-%20${encodeURIComponent(p.name)}">
+              Question
+            </a>
           </div>
         </div>
       </div>
     `;
   }
 
-  grid.innerHTML = PRODUCTS.map(card).join("");
+  function render(){
+    const list = getFilteredSorted();
+    grid.innerHTML = list.map(productCard).join("");
+    wireGalleries();
+  }
+
+  function wireGalleries(){
+    document.querySelectorAll(".product").forEach(card => {
+      const pid = card.getAttribute("data-product");
+      const product = PRODUCTS.find(p => p.id === pid);
+      if(!product) return;
+
+      const mainWrap = card.querySelector(".mainImg");
+      const mainImg = mainWrap?.querySelector("img");
+      const thumbs = card.querySelectorAll(".thumb");
+
+      thumbs.forEach(t => {
+        t.addEventListener("click", () => {
+          const src = t.getAttribute("data-src");
+          const idx = Number(t.getAttribute("data-i"));
+          if(mainImg){
+            mainImg.src = src;
+            mainWrap.setAttribute("data-src", src);
+            mainWrap.setAttribute("data-index", String(idx));
+          }
+          thumbs.forEach(x => x.classList.remove("active"));
+          t.classList.add("active");
+        });
+      });
+
+      if(mainWrap){
+        mainWrap.addEventListener("click", () => {
+          const idx = Number(mainWrap.getAttribute("data-index") || "0");
+          openModal(product, idx);
+        });
+      }
+    });
+  }
+
+  // --- Modal (zoom) ---
+  const modal = document.getElementById("modal");
+  const modalImg = document.getElementById("modalImg");
+  const modalTitle = document.getElementById("modalTitle");
+  const closeBtn = document.getElementById("closeBtn");
+  const prevBtn = document.getElementById("prevBtn");
+  const nextBtn = document.getElementById("nextBtn");
+
+  let modalProduct = null;
+  let modalIndex = 0;
+
+  function openModal(product, index){
+    modalProduct = product;
+    modalIndex = Math.max(0, Math.min(index, (product.images?.length || 1) - 1));
+    modalTitle.textContent = product.name;
+    modalImg.src = product.images[modalIndex];
+    modal.classList.add("open");
+    modal.setAttribute("aria-hidden", "false");
+  }
+
+  function closeModal(){
+    modal.classList.remove("open");
+    modal.setAttribute("aria-hidden", "true");
+    modalImg.src = "";
+    modalProduct = null;
+    modalIndex = 0;
+  }
+
+  function prev(){
+    if(!modalProduct) return;
+    const n = modalProduct.images.length;
+    modalIndex = (modalIndex - 1 + n) % n;
+    modalImg.src = modalProduct.images[modalIndex];
+  }
+
+  function next(){
+    if(!modalProduct) return;
+    const n = modalProduct.images.length;
+    modalIndex = (modalIndex + 1) % n;
+    modalImg.src = modalProduct.images[modalIndex];
+  }
+
+  closeBtn.addEventListener("click", closeModal);
+  prevBtn.addEventListener("click", prev);
+  nextBtn.addEventListener("click", next);
+
+  modal.addEventListener("click", (e) => {
+    if(e.target === modal) closeModal();
+  });
+
+  document.addEventListener("keydown", (e) => {
+    if(!modal.classList.contains("open")) return;
+    if(e.key === "Escape") closeModal();
+    if(e.key === "ArrowLeft") prev();
+    if(e.key === "ArrowRight") next();
+  });
+
+  // search/sort
+  q.addEventListener("input", render);
+  sort.addEventListener("change", render);
+  render();
 </script>
 </body>
 </html>
