--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
       box-shadow:0 18px 60px rgba(0,0,0,.40);
     }
 
+    /* Gallery */
     .imgWrap{
       border-bottom:1px solid var(--line);
       background: rgba(0,0,0,.22);
@@ -124,7 +125,7 @@
     .mainImg img{
       width:100%;
       height:100%;
-      object-fit: contain; /* show full product */
+      object-fit: contain;
       display:block;
       filter: contrast(1.06) saturate(1.03) brightness(1.03);
       background: rgba(0,0,0,.20);
@@ -147,7 +148,6 @@
       border:1px solid rgba(255,255,255,.16);
       backdrop-filter: blur(6px);
     }
-
     .thumbs{
       display:flex;
       gap:8px;
@@ -257,7 +257,7 @@
       .grid{ grid-template-columns:1fr; }
       h1{ font-size:34px; }
       nav{ display:none; }
-      .navBtn{ display:none; } /* phone: swipe/thumbnail is enough */
+      .navBtn{ display:none; }
     }
   </style>
 </head>
@@ -366,7 +366,7 @@
 <script>
   const EMAIL = "tds3ds123@gmail.com";
 
-  // ✅ Put your images in /images using the exact filenames listed above
+  // ✅ Uses your exact filenames
   const PRODUCTS = [
     {
       id: "turtle",
@@ -448,7 +448,7 @@
     return `
       <div class="product" data-product="${p.id}">
         <div class="imgWrap">
-          <div class="mainImg" data-zoom="1" data-src="${main}" data-index="0" title="Click to zoom">
+          <div class="mainImg" data-src="${main}" data-index="0" title="Click to zoom">
             ${p.tag ? `<span class="tag">${escapeHtml(p.tag)}</span>` : ""}
             <img src="${main}" alt="${escapeHtml(p.name)}">
             <span class="zoomHint">Click to zoom</span>
@@ -583,4 +583,4 @@
   render();
 </script>
 </body>
-</html> 
+</html>
